# SARibbon-pyqt5

./: CHANGELOG.md  ReadMe.md  notes.txt  pyproject.toml
.github/workflows/: ci.yml
example/: fullDemo.py  mainWindowExample.py  tz_realization.py  untitled0.py  untitled1.py  untitled3.py  untitled4.py  untitled5.py
src/: setup.py
src/PySARibbon/: SAFramelessHelper.py  SARibbonApplicationWidget.py  SARibbonBar.py  SARibbonBarLayout.py  SARibbonButtonGroupWidget.py  SARibbonCategory.py  SARibbonCategoryLayout.py  SARibbonContextCategory.py  SARibbonGallery.py  SARibbonMainWindow.py  SARibbonPanel.py  SARibbonPanelLayout.py  SARibbonPannel.py  SARibbonPannelLayout.py  SARibbonQuickAccessBar.py  SARibbonSystemButtonBar.py  SARibbonWidget.py  SAWindowButtonGroup.py  __init__.py  compat.py  resource_rc.py
src/PySARibbon/SACustomize/: SARibbonActionsManager.py  SARibbonCustomizeData.py  SARibbonCustomizeDialog.py  SARibbonCustomizeWidget.py
src/PySARibbon/SATools/: SARibbonDrawHelper.py  SARibbonElementCreateDelegate.py  SARibbonGlobal.py
src/PySARibbon/SAWidgets/: SARibbonApplicationButton.py  SARibbonCategoryScrollButton.py  SARibbonColorToolButton.py  SARibbonControlButton.py  SARibbonCtrlContainer.py  SARibbonGalleryGroup.py  SARibbonLineWidgetContainer.py  SARibbonMenu.py  SARibbonPanelItem.py  SARibbonPanelOptionButton.py  SARibbonPannelItem.py  SARibbonPannelOptionButton.py  SARibbonSeparatorWidget.py  SARibbonStackedWidget.py  SARibbonTabBar.py  SARibbonToolButton.py  __init__.py
src/PySARibbon/resource/: default.qss  office2013.qss  (+7 more)
tests/: test_core.py
