[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PySARibbon"
version = "1.0.2"
description = "4种目前常见的ribbon样式."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "sardkit", email = "sardkit@163.com" },
]
keywords = ["python", "ribbon", "pyqt5", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyQt5>=5.12",
]

[project.urls]
Homepage = "https://github.com/sardkit/SARibbon-pyqt5"
Repository = "https://github.com/sardkit/SARibbon-pyqt5"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
